--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
                 resultAgent = "iOS";
             }
 
-            alert(resultAgent)
-
-            // window.location = 'deeplink://home';
-            // setTimeout(() => {
-            //     window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
-            // }, 2000)
+            if (resultAgent === 'Android') {
+                window.location = 'deeplink://home';
+                setTimeout(() => {
+                    window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
+                }, 100)
+            } else if (resultAgent === 'iOS') {
+                //window.location = 'deeplink://home';
+                setTimeout(() => {
+                    window.location = 'https://itunes.apple.com/us/app/spotify-music/id324684580?mt=8&v0=WWW-NAUS-ITSTOP100-FREEAPPS&l=en&ign-mpt=uo%3D4';
+                }, 100)
+            }
         })();
     </script>
 </head>
