--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
 
             if (resultAgent === 'Android') {
-                window.location = 'deeplink://aeoneshop';
+                window.location = 'aeoneshop://deeplink';
                 setTimeout(() => {
                     window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
                 }, 100)
