--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             } else if (resultAgent === 'iOS') {
                 //window.location = 'deeplink://home';
                 setTimeout(() => {
-                    window.location = 'https://itunes.apple.com/us/app/spotify-music/id324684580?mt=8&v0=WWW-NAUS-ITSTOP100-FREEAPPS&l=en&ign-mpt=uo%3D4';
+                    window.location = 'https://itunes.apple.com/us/app/aeoneshop/id1268290349?ls=1&mt=8';
                 }, 500)
             }
         })();
