--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
                 }, 500)
             } else if (resultAgent === 'iOS') {
-                //window.location = 'deeplink://home';
+                window.location = 'aeoneshop://';
                 setTimeout(() => {
                     window.location = 'https://itunes.apple.com/us/app/aeoneshop/id1268290349?ls=1&mt=8';
                 }, 500)
