--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
 
             if (resultAgent === 'Android') {
-                window.location = 'aeoneshop://deeplink';
+                window.location = 'exp://k4-f9s.duy-tranngoc.hara-works.exp.direct:80/--/';
                 setTimeout(() => {
                     window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
                 }, 500)
