--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             }
 
             if (resultAgent === 'Android') {
-                window.location = 'exp://192.168.11.163:19000';
+                window.location = 'haravanapp://';
                 setTimeout(() => {
                     window.location = 'https://play.google.com/store/apps/details?id=com.aeoneshop';
                 }, 500)
