--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <script>
         (function () {
+            let url = window.location.href;
+            console.log('url', url);
             let resultAgent = 'unknown';
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
