--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             }
 
             if (resultAgent === 'Android') {
-                window.location = 'haraworks://';
+                window.location = 'haraworks://' + url;
                
             } else if (resultAgent === 'iOS') {
                 window.location = 'giacmosuaviet://';
