--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         (function () {
-            let url = window.location.href;
+            let url = `haraworks://&{window.location.href}`;
             console.log('url', url);
             let resultAgent = 'unknown';
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -22,7 +22,7 @@
             }
 
             if (resultAgent === 'Android') {
-                window.location = 'haraworks://' + url;
+                window.location = url;
                
             } else if (resultAgent === 'iOS') {
                 window.location = 'giacmosuaviet://';
