--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         (function () {
-            let url = `haraworks://&{window.location.href}`;
+            let url = `haraworks://${window.location.href}`;
             console.log('url', url);
             let resultAgent = 'unknown';
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
