--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                 window.location = url;
                
             } else if (resultAgent === 'iOS') {
-                window.location = 'giacmosuaviet://';
-                setTimeout(() => {
-                    window.location = 'https://itunes.apple.com/us/app/aeoneshop/id1268290349?ls=1&mt=8';
-                }, 500)
+                window.location = url;
             }
         })();
     </script>
